--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <title>Calculator</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="assets/scripts/calci.js"></script>
   <link rel="stylesheet" href="assets/stylesheets/styles.css">
 
 </head>
 <body>
     <div id = "calculator">
     
-    <div id = "result" >500</div>
-     <div id = "preview">50x10</div>
+    <div id = "result" ></div>
+     <div id = "preview"></div>
      <div class = "container-fluid">
       <div class = "row">
         <div id = "keys" class = "col-xs-9" >
@@ -21,47 +23,47 @@
         	<div class="row">
            		<div class="container-fluid">
         			<div class="row">
-        				<div class="col-xs-4 key">7</div>
-         				<div class="col-xs-4 key">8</div>
-          				<div class="col-xs-4 key">9</div>
+        				<div class="col-xs-4 key input" data key-type ="digit" data-digit="7">7</div>
+         				<div class="col-xs-4 key input"  data key-type ="digit"data-digit="8">8</div>
+          			<div class="col-xs-4 key input"  data key-type ="digit"data-digit="9">9</div>
           			</div>
           		</div>
    			</div>	
    			<div class="row">
           	 	<div class="container-fluid">
         				<div class="row">
-        				<div class="col-xs-4 key">4</div>
-         				<div class="col-xs-4 key">5</div>
-          				<div class="col-xs-4 key">6</div>
+        				<div class="col-xs-4 key input" data key-type ="digit" data-digit="4">4</div>
+         				<div class="col-xs-4 key input"  data key-type ="digit"data-digit="5">5</div>
+          			<div class="col-xs-4 key input"  data key-type ="digit"data-digit="6">6</div>
           			</div>
           		</div>
    			</div>	
    			<div class="row">
            		<div class="container-fluid">
         			<div class="row">
-        				<div class="col-xs-4 key">1</div>
-         				<div class="col-xs-4 key">2</div>
-          				<div class="col-xs-4 key">3</div>
+        				<div class="col-xs-4 key input"  data key-type ="digit"data-digit="1">1</div>
+         				<div class="col-xs-4 key input"  data key-type ="digit"data-digit="2">2</div>
+          			<div class="col-xs-4 key input"  data key-type ="digit"data-digit="3">3</div>
           			</div>
           		</div>
    			</div>	
    			<div class="row">
            		<div class="container-fluid">
         			<div class="row">
-        				<div class="col-xs-4 key">.</div>
-         				<div class="col-xs-4 key">0</div>
-          				<div class="col-xs-4 key">=</div>
+        				<div class="col-xs-4 key" data-key-type data-digit=".">.</div>
+         				<div class="col-xs-4 key input" data-key-type data-digit="0">0</div>
+          			<div class="col-xs-4 key" data-key-type data-digit="=">=</div>
           			</div>
           		</div>
    			</div>						
           <p></p>
         </div>
         <div id = "operators" class = "col-xs-3" >
-          <div class="operator">DEL</div>
-          <div class="operator">/</div>
-          <div class="operator">x</div>
-          <div class="operator">-</div>
-          <div class="operator">+</div>
+          <div id="delete" class="operator input">DEL</div>
+          <div class="operator input" data-key-type="operator" data-operator="/">/</div>
+          <div class="operator input" data-key-type="operator" data-operator="*">x</div>
+          <div class="operator input" data-key-type="operator" data-operator="-">-</div>
+          <div class="operator input" data-key-type="operator" data-operator="+">+</div>
         </div>
       </div>
      </div>
