--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,8 +6,8 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/stylesheets/styles.css">
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="assets/scripts/jqery.hotkeys.js"></script>
+  <script src="assets/scripts/jquery.min.js"></script>
+  <script src="assets/scripts/jquery.hotkeys.js"></script>
   <script src="assets/scripts/calci.js"></script>
 
 </head>
@@ -17,17 +16,17 @@
     
     <div id = "result" ></div>
      <div id = "preview"></div>
+     <div id = "condistions"></div>
      <div class = "container-fluid">
       <div class = "row">
         <div id = "keys" class = "col-xs-9" >
-      	
-        	<div class="row">
+          	<div class="row">
            		<div class="container-fluid">
         			<div class="row">
         				<div class="col-xs-4 key input" data-key-type="digit" data-digit="7">7</div>
          				<div class="col-xs-4 key input" data-key-type="digit" data-digit="8">8</div>
           			<div class="col-xs-4 key input" data-key-type="digit" data-digit="9">9</div>
-          			</div>
+          		 </div>
           		</div>
    			</div>	
    			<div class="row">
